--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "cross-env": "^2.0.0",
     "gulp": "^3.9.1",
     "koa": "^2.0.0",
-    "koa-compose": "^2.4.0",
+    "koa-compose": "^3.1.0",
     "koa-convert": "^1.2.0",
+    "koa-router": "^7.0.1",
+    "koa-static": "^3.0.0",
     "lodash": "^4.15.0",
     "nodemon": "^1.10.2",
     "react": "^15.3.1",
