--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "koa-compose": "^3.1.0",
     "koa-convert": "^1.2.0",
     "koa-router": "^7.0.1",
+    "koa-session": "^3.3.1",
     "koa-static": "^3.0.0",
     "lodash": "^4.15.0",
     "nodemon": "^1.10.2",
