--- a/package.json
+++ b/package.json
@@ -25,13 +25,17 @@
     "cross-env": "^2.0.0",
     "gulp": "^3.9.1",
     "koa": "^2.0.0",
+    "koa-bodyparser": "^3.2.0",
     "koa-compose": "^3.1.0",
+    "koa-compress": "^1.0.9",
     "koa-convert": "^1.2.0",
+    "koa-generic-session": "^1.11.3",
+    "koa-passport": "^2.2.2",
     "koa-router": "^7.0.1",
-    "koa-session": "^3.3.1",
     "koa-static": "^3.0.0",
     "lodash": "^4.15.0",
     "nodemon": "^1.10.2",
+    "passport-local": "^1.0.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
