--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "koa-router": "^7.0.1",
     "koa-static": "^3.0.0",
     "lodash": "^4.15.0",
+    "mysql": "^2.11.1",
     "nodemon": "^1.10.2",
     "passport-local": "^1.0.0",
     "react": "^15.3.1",
@@ -41,6 +42,7 @@
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
+    "sequelize": "^3.24.1",
     "source-map-support": "^0.4.2",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.0"
@@ -49,6 +51,8 @@
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-class-properties": "^6.11.5",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "interactive": "^0.1.9",
+    "mockjs": "^1.0.1-beta3",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.3.0"
