--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "koa-router": "^7.0.1",
     "koa-static": "^3.0.0",
     "lodash": "^4.15.0",
+    "lowdb": "^0.13.1",
     "mysql": "^2.11.1",
     "nodemon": "^1.10.2",
     "passport-local": "^1.0.0",
@@ -44,6 +45,7 @@
     "redux-thunk": "^2.1.0",
     "sequelize": "^3.24.1",
     "source-map-support": "^0.4.2",
+    "uid-safe": "^2.1.2",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.0"
   },
