--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
+    "classnames": "^2.2.5",
     "concurrently": "^2.2.0",
     "cross-env": "^2.0.0",
+    "css-loader": "^0.24.0",
     "gulp": "^3.9.1",
     "koa": "^2.0.0",
     "koa-bodyparser": "^3.2.0",
@@ -38,13 +40,21 @@
     "mysql": "^2.11.1",
     "nodemon": "^1.10.2",
     "passport-local": "^1.0.0",
+    "postcss": "^5.1.2",
+    "postcss-loader": "^0.11.0",
+    "precss": "^1.4.0",
     "react": "^15.3.1",
+    "react-constant": "^2.0.1",
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
+    "react-router": "^2.7.0",
     "redux": "^3.5.2",
+    "redux-bind-action-groups": "^2.1.0",
+    "redux-create-reducer-curry": "^1.0.0",
     "redux-thunk": "^2.1.0",
     "sequelize": "^3.24.1",
     "source-map-support": "^0.4.2",
+    "style-loader": "^0.13.1",
     "uid-safe": "^2.1.2",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.0"
